# packages/contracts/openapi.json
@@ -841,6 +841,17 @@
             "title": "Strategy",
             "type": "string"
           },
+          "tier_unit": {
+            "anyOf": [
+              {
+                "type": "string"
+              },
+              {
+                "type": "null"
+              }
+            ],
+            "title": "Tier Unit"
+          },
           "tiers": {
             "anyOf": [
               {
